[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Writing_DBox.gd" type="Script" id=2]
[ext_resource path="res://Themes/testTheme.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.956863, 0.956863, 0.956863, 0 )
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 8

[node name="DBox_Panel" type="PanelContainer"]
margin_right = 960.0
margin_bottom = 50.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DBox_HBox" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 950.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 30 )

[node name="DialogueBox_TextEdit" type="TextEdit" parent="DBox_HBox"]
margin_right = 900.0
margin_bottom = 30.0
rect_min_size = Vector2( 900, 30 )
text = "// New line"
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.45

[node name="Dialogue_Label" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 950.0
margin_bottom = 40.0
mouse_default_cursor_shape = 1
bbcode_enabled = true
bbcode_text = "// New line"
text = "// New line"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_exited" from="DBox_HBox/DialogueBox_TextEdit" to="." method="_on_Dialogue_focus_exited"]
[connection signal="text_changed" from="DBox_HBox/DialogueBox_TextEdit" to="." method="_on_DialogueBox_text_changed"]
[connection signal="gui_input" from="Dialogue_Label" to="." method="_on_Dialogue_Label_gui_input"]
[connection signal="mouse_entered" from="Dialogue_Label" to="." method="_on_Dialogue_Label_mouse_entered"]
[connection signal="mouse_exited" from="Dialogue_Label" to="." method="_on_Dialogue_Label_mouse_exited"]
